<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:baselineAligned="false"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:layout_marginBottom="10dp"
    android:orientation="horizontal"
    android:background="#FFFFFF" >

    <RelativeLayout
        android:id="@+id/scheduleItemProposer"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:background="@null"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageViewUserIcon"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:layout_centerInParent="true"
            android:scaleType="centerInside"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/desc"
            android:src="@drawable/profile_icon_default" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textSize="12sp"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/imageViewUserIcon"
            android:ellipsize="marquee"
            android:gravity="center_horizontal"
            android:lines="2"
            android:maxLines="2"
            android:text="@string/default_username" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/scheduleItemDetail"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:background="@drawable/schedule_detail_box"
        android:layout_height="match_parent">

        <View
            android:id="@+id/strut"
            android:layout_width="0dp"
            android:layout_height="0dp" 
            android:layout_centerHorizontal="true" />

        <LinearLayout
            android:id="@+id/scheduleItemDetailLocFrom"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_alignRight="@id/strut"
            android:layout_alignParentLeft="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/nameLocFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/go_loc" />

            <TextView
                    android:id="@+id/fromTimeHrSchedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:gravity="left"
                    android:text="@string/go_time" />

            <RelativeLayout
                android:id="@+id/fromTimeSchedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <ImageView
                    android:id="@+id/imageViewPlusMinusIconGo"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/plusminus_icon"
                    android:contentDescription="@string/desc" />

                <TextView
                    android:id="@+id/fromTimeHrArd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_toRightOf="@id/imageViewPlusMinusIconGo"
                    android:gravity="center_vertical"
                    android:text="@string/go_time_range" />
            </RelativeLayout>

            <TextView
                android:id="@+id/fromDateSchedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/go_time_date"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/toTimeLocScheduleItem"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_alignLeft="@id/strut"
            android:layout_alignParentRight="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/toLocName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/back_loc" />

            <TextView
                android:id="@+id/toTimeHrSchedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:gravity="center_vertical"
                android:text="@string/back_time" />

            <RelativeLayout
                android:id="@+id/toTimeSchedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageViewPlusMinusIconBack"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/plusminus_icon"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/desc"/>

                <TextView
                    android:id="@+id/toTimeHrArd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_toRightOf="@id/imageViewPlusMinusIconBack"
                    android:gravity="center_vertical"
                    android:text="@string/back_time_range" />
            </RelativeLayout>

            <TextView
                android:id="@+id/toDateSchedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/back_time_date" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/statScheduleItem"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relativeLayoutStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/status_okay_box">
            <ImageView
                android:id="@+id/imageViewDriverStatus"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/fancy_car_icon"
                android:scaleType="centerInside"
                android:contentDescription="@string/desc" />
            <TextView
                android:id="@+id/textViewDriverStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/driver_status_not_yet"/>
            <TextView
                android:id="@+id/statSteasScheduleItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageViewDriverStatus"
                android:layout_centerHorizontal="true"
                android:text="@string/seats_availability" />
        </RelativeLayout>

        <Button
            android:id="@+id/joinScheduleItem"
            android:text="@string/wanna_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</LinearLayout>